--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
                       when looking
                     </p>
                     <div class="btn-box">
-                      <a href="" class="btn-1">
-                        Login/Signup
+                      <a href="register2.html" class="btn-1">
+                        Signup
                       </a>
                       <a href="" class="btn-2">
                         Login/Signup
@@ -129,8 +129,8 @@
                       when looking
                     </p>
                     <div class="btn-box">
-                      <a href="" class="btn-1">
-                        Login/Signup
+                      <a href="register2.html" class="btn-1">
+                        Signup
                       </a>
                       <a href="" class="btn-2">
                         Login/Signup
@@ -159,8 +159,8 @@
                       when looking
                     </p>
                     <div class="btn-box">
-                      <a href="" class="btn-1">
-                        Login/Signup
+                      <a href="register2.html" class="btn-1">
+                        Signup
                       </a>
                       <a href="" class="btn-2">
                         Login/Signup
